--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Mariana Costa",
   "dependencies": {
+    "@deckdeckgo/highlight-code": "^3.3.1",
     "babel-plugin-styled-components": "^1.12.0",
     "emailjs-com": "^2.6.4",
     "false": "^0.0.4",
@@ -20,8 +21,13 @@
     "gatsby-plugin-react-helmet": "^4.0.0",
     "gatsby-plugin-sharp": "^3.0.0",
     "gatsby-plugin-styled-components": "^4.1.0",
+    "gatsby-remark-external-links": "^0.0.4",
+    "gatsby-remark-highlight-code": "^3.0.1",
+    "gatsby-remark-images": "^5.9.0",
+    "gatsby-remark-reading-time": "^1.1.0",
     "gatsby-source-filesystem": "^3.0.0",
     "gatsby-transformer-json": "^3.1.0",
+    "gatsby-transformer-remark": "^4.9.0",
     "gatsby-transformer-sharp": "^3.0.0",
     "i": "^0.3.6",
     "npm": "^7.7.4",
@@ -32,6 +38,7 @@
     "react-hook-form": "^6.15.5",
     "react-particles-js": "^3.5.3",
     "react-scrollspy": "^3.4.3",
+    "rehype-react": "^7.0.0",
     "sharp": "^0.28.3",
     "styled-components": "^5.2.1"
   },
