--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "author": "Mariana Costa",
   "dependencies": {
     "@deckdeckgo/highlight-code": "^3.3.1",
+    "@reach/router": "^1.3.4",
     "babel-plugin-styled-components": "^1.12.0",
     "emailjs-com": "^2.6.4",
     "false": "^0.0.4",
     "gatsby": "^3.9.0",
     "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-gatsby-cloud": "^2.0.0",
+    "gatsby-plugin-gdpr-cookies": "^2.0.6",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^1.0.0",
     "gatsby-plugin-manifest": "^3.0.0",
@@ -33,6 +35,7 @@
     "npm": "^7.7.4",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-cookie-consent": "^6.3.0",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^6.15.5",
