--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -19,6 +19,4 @@ jobs:
           channelId: live
           projectId: mariana-costa
         env:
-          GATSBY_SERVICE_ID: '${{ secrets.GATSBY_SERVICE_ID }}'
-          GATSBY_TEMPLATE_ID: '${{ secrets.GATSBY_TEMPLATE_ID }}'
-          GATSBY_USER_ID: '${{ secrets.GATSBY_USER_ID }}'
+          GATSBY_ACTIVE_ENV: production
