--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -9,6 +9,10 @@ name: Deploy to Firebase Hosting on merge
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
+    env:
+      GATSBY_SERVICE_ID: '${{ secrets.GATSBY_SERVICE_ID }}'
+      GATSBY_TEMPLATE_ID: '${{ secrets.GATSBY_TEMPLATE_ID }}'
+      GATSBY_USER_ID: '${{ secrets.GATSBY_USER_ID }}'
     steps:
       - uses: actions/checkout@v2
       - run: mkdir -p public/exports && yarn install --frozen-lockfile && yarn build
@@ -18,5 +22,3 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_MARIANA_COSTA }}'
           channelId: live
           projectId: mariana-costa
-        env:
-          GATSBY_ACTIVE_ENV: production
