--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Mariana Costa",
   "dependencies": {
     "@deckdeckgo/highlight-code": "^3.3.1",
+    "@marianapatcosta/talk-to-me": "^1.0.1",
     "@reach/router": "^1.3.4",
     "babel-plugin-styled-components": "^1.12.0",
     "emailjs-com": "^2.6.4",
@@ -39,16 +40,17 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^6.15.5",
-    "react-particles-js": "^3.5.3",
     "react-scrollspy": "^3.4.3",
+    "react-tsparticles": "^2.5.3",
     "rehype-react": "^7.0.0",
     "sharp": "^0.28.3",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "tsparticles": "^2.5.3"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
     "prettier": "2.2.1",
-    "tsparticles": "^1.30.4"
+    "yarn-upgrade-all": "^0.7.1"
   },
   "keywords": [
     "gatsby"
@@ -56,7 +58,7 @@
   "license": "2BSD",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop -H 0.0.0.0",
+    "dev": "gatsby develop -H 0.0.0.0",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
