--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
   "author": "Mariana Costa",
   "dependencies": {
     "@deckdeckgo/highlight-code": "^3.3.1",
-    "@marianapatcosta/talk-to-me": "^1.0.1",
+    "@marianapatcosta/talk-to-me": "1.0.5",
     "@reach/router": "^1.3.4",
     "babel-plugin-styled-components": "^1.12.0",
     "emailjs-com": "^2.6.4",
-    "false": "^0.0.4",
     "gatsby": "^3.9.0",
     "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-gatsby-cloud": "^2.0.0",
@@ -48,8 +47,8 @@
     "tsparticles": "^2.5.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.6",
-    "prettier": "2.2.1",
+    "@babel/core": "^7.20.5",
+    "prettier": "^2.8.0",
     "yarn-upgrade-all": "^0.7.1"
   },
   "keywords": [
